Update contact section email and enhance header functionality - move filters and search bar for projects to its relevant section for ease of accessibility - fix misalignment search icon and X icon in search - fix email timeout issue and use dns.lookup for dns resolution for nodemailer - fix: Image upload and update issue.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -295,3 +295,6 @@
     display: none; /* Chrome, Safari, Opera */
   }
 }
+* {
+  scroll-behavior: smooth !important;
+}
